force-app/main/default/objects/vlocity_ins__Project__c/vlocity_ins__Project__c.object-meta.xml
<CustomObject>
    <description>RESERVED. For future use under Insurance and Health.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>