force-app/main/default/objects/vlocity_ins__Project__c/fields/vlocity_ins__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsDefault__c</fullName>
    <formula>$Setup.vlocity_ins__WorkSetSettings__c.vlocity_ins__DefaultProjectGlobalKey__c  =  vlocity_ins__GlobalKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>