force-app/main/default/objects/vlocity_ins__Project__c/fields/vlocity_ins__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In-Test</fullName>
            </value>
            <value>
                <fullName>In-Review</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>